--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Tcc by ltgouvea</title>
+    <title>Técnicas ultraleves para detecção de malware em redes de computadores</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -12,64 +13,68 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+</head>
 
-  </head>
-  <body>
-
-      <header>
-        <h1>Tcc</h1>
+<body>
+    <header>
+        <h1>Técnicas ultraleves para detecção de malware em redes de computadores</h1>
         <p>i have no fucking clue what I&#39;m doing, but I&#39;m doing it like a boss</p>
-      </header>
-
-      <div id="banner">
+    </header>
+    <div id="banner">
         <span id="logo"></span>
-
-        <a href="https://github.com/ltgouvea/TCC" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="https://github.com/ltgouvea/TCC" class="button fork"><strong>Acesse no Github</strong></a>
         <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/ltgouvea/TCC/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/ltgouvea/TCC/tarball/master" class="button">TAR</a></li>
-          </ul>
+            <span>Baixe os arquivos:</span>
+            <ul>
+                <li><a href="https://github.com/ltgouvea/TCC/zipball/master" class="button">.ZIP</a></li>
+                <li><a href="https://github.com/ltgouvea/TCC/tarball/master" class="button">.TAR</a></li>
+            </ul>
         </div>
-      </div><!-- end banner -->
-
+    </div>
+    <!-- end banner -->
     <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <nav>
+            <ul></ul>
+        </nav>
+        <section>
+            <h3><a id="welcome-to-github-pages" class="anchor" href="https://github.com/ltgouvea/tcc" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span>O que tem nesse repositório?</a></h3>
+            <p>A Monografia (PDF + Código fonte LaTeX) do meu trabalho de conclusão de curso desenvolvido em 2016 na UNESP de Bauru para o bacharelado em Ciência da Computação.</p>
+            <h3>
+              <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Autores</h3>
+            <!-- HORA DA ZUERA -->
+            <h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+            <h3>Lucas T. A. Gouvêa</h3>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+            <p>20 e tantos anos nas costas, músico, programador e membro dos Illuminati com orgulho. Você pode encontrá-lo <a href="https://facebook.com/llucasgouvea">aqui</a> e encher o saco dele sempre que quiser.</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+            <hr>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+            <h4>Curiosidades:</h4>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+            <p>Lucas é proprietário de um unicórnio chamado Júpiter.</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+            <script>
+             function play(){
+                  var audio = document.getElementById("audio");
+                  audio.play();
+                            }
+              </script>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+            <img src="./images/horse-head-with-hair-outline_318-49122.png" alt="Unicorn" value="PLAY" onclick="play()" class="unicorn-picture" width="90" height="90">
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/ltgouvea">ltgouvea</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
+            <audio id="audio" src="./audio/unicorn_theme.mp3"></audio>
+            
+              <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mano, comofas?</h3>
+            <p>Leia sobre a documentação de páginas geradas automaticamente para repositórios do git <a href="https://help.github.com/pages">aqui</a> ou <a href="https://github.com/contact">grite por ajuda</a> e sofra.</p>
+        </section>
+        <footer>
+            <p>Projeto mantido por <a href="https://github.com/ltgouvea">ltgouvea</a></p>
+            <p><small>Hospedado em GitHub Pages &mdash; Tema por <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+            <p><small>este site contém mensagens subliminares.</small></p>
+        </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+</body>
+
 </html>
