--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <img src="./images/horse-head-with-hair-outline_318-49122.png" alt="Unicorn" value="PLAY" onclick="play()" class="unicorn-picture" width="90" height="90">
 
-            <audio id="audio" src="/Audio/unicorn_theme.mp3"></audio>
+            <audio id="audio" src="./Audio/unicorn_theme.mp3"></audio>
             
               <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mano, comofas?</h3>
             <p>Leia sobre a documentação de páginas geradas automaticamente para repositórios do git <a href="https://help.github.com/pages">aqui</a> ou <a href="https://github.com/contact">grite por ajuda</a> e sofra.</p>
