--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
 
             <p>Lucas é proprietário de um unicórnio chamado Júpiter.</p>
 
-            <script>
-             function play(){
-                  var audio = document.getElementById("audio");
-                  audio.play();
-                            }
-              </script>
+            <img src="./images/horse-head-with-hair-outline_318-49122.png" alt="Unicorn" onclick="play()" class="unicorn-picture" width="90" height="90">
 
-            <img src="./images/horse-head-with-hair-outline_318-49122.png" alt="Unicorn" value="PLAY" onclick="play()" class="unicorn-picture" width="90" height="90">
+            <audio id="audio" class="sound" value="STOP" src="./Audio/unicorn_theme.mp3"></audio>
+            <br>
+            <p>Ele também guarda um monte de livros doidos sobre música <a href="https://goo.gl/8nVEZG">aqui</a> e está escrevendo seu próprio material pra divulgar pro mundo todo quando estiver pronto.</p>
 
-            <audio id="audio" src="./Audio/unicorn_theme.mp3"></audio>
+            <p>Se você acredita em signos, pode encontrar o mapa astral dele <a href="./images/mapa_astral.jpg">aqui</a></p>
             
-              <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mano, comofas?</h3>
+            <br>
+            <hr width="590">
+
+              <h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mano, comofas?</h3>
             <p>Leia sobre a documentação de páginas geradas automaticamente para repositórios do git <a href="https://help.github.com/pages">aqui</a> ou <a href="https://github.com/contact">grite por ajuda</a> e sofra.</p>
         </section>
         <footer>
