--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <br>
             <p>Ele também guarda um monte de livros doidos sobre música <a href="https://goo.gl/8nVEZG">aqui</a> e está escrevendo seu próprio material pra divulgar pro mundo todo quando estiver pronto.</p>
 
-            <p>Se você acredita em signos, pode encontrar o mapa astral dele <a href="./images/mapa_astral.JPG">aqui</a></p>
+            <p>Se você acredita em signos, pode encontrar o mapa astral dele <a href="./images/mapa_astral.jpg">aqui</a></p>
             
             <br>
             <hr width="590">
