--- a/index.html
+++ b/index.html
@@ -56,12 +56,14 @@
 
             <img src="./images/horse-head-with-hair-outline_318-49122.png" alt="Unicorn" onclick="play()" class="unicorn-picture" width="90" height="90">
 
-            <audio id="audio" class="sound" value="STOP" src="./Audio/unicorn_theme.mp3"></audio>
+            <audio id="audio" class="sound" value="STOP" src="./Audio/hocus_pocus.mp3"></audio>
             <br>
             <p>Ele também guarda um monte de livros doidos sobre música <a href="https://goo.gl/8nVEZG">aqui</a> e está escrevendo seu próprio material pra divulgar pro mundo todo quando estiver pronto.</p>
 
-            <p>Se você acredita em signos, pode encontrar o mapa astral dele <a href="./images/mapa_astral.jpg">aqui</a></p>
+            <p>Se você acredita em signos, pode encontrar o mapa astral dele <strong id="label_show" onclick="showimg()" ">aqui</strong></p>
             
+            <img src="./images/mapa_astral.jpg" class="hidden" id="imgtrigger">
+
             <br>
             <hr width="590">
 
