--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <p>Se você acredita em signos, pode encontrar o mapa astral dele <strong id="label_show" onclick="showimg()" ">aqui</strong></p>
             
-            <img src="./images/mapa_astral.jpg" class="hidden" id="imgtrigger">
+            <img src="/images/mapa_astral.jpg" class="hidden" id="imgtrigger">
 
             <br>
             <hr width="590">
