--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
 
             <p>Lucas é proprietário de um unicórnio chamado Júpiter.</p>
 
+            <p>Lucas já apresentou o trabalho em questão e foi aprovado. Invejosos dirão que é mentira. Não é.</p>
+
+            <!-- Fica aqui o easter egg mais gostoso: Chupa Sacoman seu véio caquético filho de uma gran puta severina do caralho
+          passei no TCC vou me formar e você vai é pra casa do caralho seu cuzão arrombado do centro do inferno. VAI PA PUTAQUEPARIU! -->
+
             <img src="./images/horse-head-with-hair-outline_318-49122.png" alt="Unicorn" onclick="play()" class="unicorn-picture" width="90" height="90">
 
             <audio id="audio" class="sound" value="STOP" src="./Audio/hocus_pocus.mp3"></audio>
@@ -61,7 +66,7 @@
             <p>Ele também guarda um monte de livros doidos sobre música <a href="https://goo.gl/8nVEZG">aqui</a> e está escrevendo seu próprio material pra divulgar pro mundo todo quando estiver pronto.</p>
 
             <p>Se você acredita em signos, pode encontrar o mapa astral dele <strong id="label_show" onclick="showimg()" ">aqui</strong></p>
-            
+
             <img src="http://s16.postimg.org/qahybqkp1/mapa_astral.jpg" class="hidden" id="imgtrigger">
 
             <br>
